Removed lib hack

--- a/.github/workflows/crates.yml
+++ b/.github/workflows/crates.yml
@@ -16,11 +16,7 @@ jobs:
         with:
           toolchain: stable
 
-      - name: Add [lib] section to Cargo.toml
-        run: |
-          echo -e '\n[lib]\npath = ""' >> Cargo.toml
-
       - name: Publish to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish --verbose --allow-dirty
+        run: cargo publish --verbose
